--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <!-- Navbar end-->
 
-    <!-- Feather Icons-->
+    <!-- Feather Icons Init-->
     <script>
       feather.replace();
     </script>
