menambah perubahan pada about section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Hero Section end-->
 
     <!-- About Section start-->
-    <section id="about" class="about">
+    <section id="about section" class="about">
       <h2><span>Tentang</span>Kami</h2>
 
       <div class="row">
