--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Hero Section end-->
 
     <!-- About Section start-->
-    <section id="about section" class="about">
+    <section id="about" class="about">
       <h2><span>Tentang</span>Kami</h2>
 
       <div class="row">
@@ -76,6 +76,70 @@
       </div>
     </section>
     <!-- About Section end-->
+
+    <!-- Menu Section start-->
+    <section id="menu" class="menu">
+      <h2><span>Menu</span>Kami</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit
+        aliquid velit nobis ducimus aspernatur?
+      </p>
+
+      <div class="row">
+        <div class="menu-card">
+          <img
+            src="img/menu/expresso.jpg"
+            alt="Espresso"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p>IDR 20k</p>
+        </div>
+
+        <div class="menu-card">
+          <img src="img/menu/late.jpg" alt="Late" class="menu-card-img" />
+          <h3 class="menu-card-title">- Late -</h3>
+          <p>IDR 30k</p>
+        </div>
+
+        <div class="menu-card">
+          <img src="img/menu/arabika.jpg" alt="Arabika" class="menu-card-img" />
+          <h3 class="menu-card-title">- Arabika -</h3>
+          <p>IDR 50k</p>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="img/menu/americano.jpg"
+            alt="americano"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">- Americano -</h3>
+          <p>IDR 35k</p>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="img/menu/cappucino.jpg"
+            alt="cappucino"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">- Cappucino -</h3>
+          <p>IDR 25k</p>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="img/menu/expresso.jpg"
+            alt="Espresso"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p>IDR 20k</p>
+        </div>
+      </div>
+    </section>
+    <!-- Menu Section end-->
 
     <!-- Feather Icons Init-->
     <script>
