--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
         <div class="menu-card">
           <img
-            src="img/menu/expresso.jpg"
-            alt="Espresso"
+            src="img/menu/cofe cold bred.jpg"
+            alt="Cold Bred"
             class="menu-card-img"
           />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p>IDR 20k</p>
+          <h3 class="menu-card-title">- Coffee Cold Bred -</h3>
+          <p>IDR 33k</p>
         </div>
       </div>
     </section>
