--- a/index.html
+++ b/index.html
@@ -141,6 +141,45 @@
     </section>
     <!-- Menu Section end-->
 
+    <!-- Contact Section start-->
+    <section id="contact" class="contact">
+      <h2><span>Kontak</span>Kami</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt,
+        temporibus?
+      </p>
+
+      <div class="row">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.4552670804746!2d98.63324667344718!3d3.7103885494495037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3036d2c8645fbad7%3A0x400ef27c351cd2c9!2sGriya%20Pesona%20Minimalis%20-%20Toko%20Vika%20-%20Blok%20H%20No.%2016!5e0!3m2!1sid!2sid!4v1750027818917!5m2!1sid!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
+        ></iframe>
+
+        <form action="">
+          <div class="input-group">
+            <i data-feather="user"></i>
+            <input type=" text" placeholder="nama" />
+          </div>
+
+          <div class="input-group">
+            <i data-feather="mail"></i>
+            <input type=" text" placeholder="email" />
+          </div>
+
+          <div class="input-group">
+            <i data-feather="phone"></i>
+            <input type=" text" placeholder="no hp" />
+          </div>
+
+          <button type="submit" class="btn">kirim pesan</button>
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section end-->
+
     <!-- Feather Icons Init-->
     <script>
       feather.replace();
