--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-          blanditiis libero et omnis ab nobis sed ad inventore voluptates
+          Kopi bukan hanya minuman, tapi juga pengalaman yang dapat
+          membangkitkan inspirasi dan kreativitas
         </p>
         <a href="#" class="cta">Beli Sekarang</a>
       </main>
@@ -63,14 +63,15 @@
         </div>
         <div class="content">
           <h3>Kenapa memilih kopi kami?</h3>
+          <p>Rasakan Perbedaan, Nikmati Kopi Kami Yang Asli dan Berkualitas</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam,
-            praesentium doloremque possimus temporibus eligendi optio?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-            incidunt fugit hic quidem nihil reprehenderit accusamus eos est
-            iusto quos.
+            Kopi kami dibuat dengan biji kopi pilihan dan dipanggang dengan
+            sempurna untuk memberikan rasa yang unik dan lezat. Nikmati
+            perbedaan dengan setiap cangkir kopi kami. Kopi kami dibuat dengan
+            biji kopi pilihan dan dipanggang dengan sempurna untuk memberikan
+            rasa yang unik dan lezat. Nikmati perbedaan dengan setiap cangkir
+            kopi kami, dan rasakan keaslian kopi yang kami sajikan dengan penuh
+            dedikasi
           </p>
         </div>
       </div>
@@ -81,8 +82,8 @@
     <section id="menu" class="menu">
       <h2><span>Menu</span>Kami</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit
-        aliquid velit nobis ducimus aspernatur?
+        Pilihan menu kami yang lezat dan segar, siap untuk dinikmati Dan jangan
+        lupa nikmati diskon untuk setiap pembelian menu kopi favorit Anda
       </p>
 
       <div class="row">
@@ -145,8 +146,8 @@
     <section id="contact" class="contact">
       <h2><span>Kontak</span>Kami</h2>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt,
-        temporibus?
+        Kontak kami untuk membuat reservasi atau untuk informasi lebih lanjut
+        tentang kedai kopi kami.
       </p>
 
       <div class="row">
@@ -179,6 +180,27 @@
       </div>
     </section>
     <!-- Contact Section end-->
+
+    <!-- Footer Section start -->
+    <footer>
+      <div class="socials">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
+
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+
+      <div class="credit">
+        <p>Created by <a href="">putrinabilapasaribu</a>. | &copy; 2025.</p>
+      </div>
+    </footer>
+    <!-- Footer Section  end-->
 
     <!-- Feather Icons Init-->
     <script>
